# fake-mall

./: Cargo.toml  README.md
src/: dto.rs  handler.rs  lib.rs  main.rs  scraper.rs  web.rs
