[package]
name = "fake-mall"
version = "0.1.0"
authors = ["Songday"]
edition = "2018"

[lib]
name = "fake_mall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
tide = "0.6.0"
sled = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
